Changelog
=========

8.6-dev0 - (unreleased)
---------------------

8.5 - (2019-01-28)
---------------------
* Jenkins: Add sonarqube step
  [avoinea refs #101552]
* Change: updated URLs pointing to eea.europa.eu with https://
  [alecghica refs #95849]

8.4 - (2018-06-13)
---------------------
* Bug fix: lambda takes no arguments (1 given)
  [avoinea]

8.3 - (2018-06-06)
---------------------
* Bug fix: Fix relatedItems cache invalidation
  [avoinea refs #95891]

8.2 - (2018-05-24)
-----------------------
* Bug fix: Speed-up cache invalidation for backward-references
  [avoinea refs #95020]
* Feature: replaced invalidate_cache method with a method that use eea.cache
  [alecghica refs #95020]
* Feature: "Refresh this page" method redirect you back to the original context
  [alecghica refs #95020]
* Feature: cache.settings if called in a context of a default view it will
  also invalidate its parent
  [alecghica refs #95020]
* Bug fix: fixed case under all invalidate methods when a broken relations
  is present and None is found instead of an object
  [alecghica refs #95020]

8.1 - (2017-12-12)
------------------
* Change: Replace eeacms/zptlint with eeacms/plone-test:4 zptlint
  [avoinea refs #90415]

8.0 - (2017-11-07)
------------------
* Change: Remove Sphinx generated documentation
  [petchesi-iulian refs #88212]

7.9 - (2017-05-22)
------------------
* Change: fixed PyLint warnings and errors
  [valipod refs #84949]

7.8 - (2017-05-15)
------------------
* Change: fixed PyLint warnings and errors
  [eduard-fironda refs #84949]

7.7 - (2017-04-24)
------------------
* Change: updated package information
  [eduard-fironda]

7.6 - (2016-05-19)
------------------
* Bug fix: Fix pylint warnings
  [chiridra refs #71940]

7.5 - (2015-08-18)
------------------
* Change: Auto-include zcml within plone context in order to make this package
  work without having to add it within buildout zcml directive.
  [avoinea]
* Feature: Implemented support for pylibmc